[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["susumutomita <oyster880@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/susumutomita/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
